# cuda-template

./: CMakeLists.txt  build.sh
src/: func.cu  func.hpp  funcs.hpp  kernel.cu  main.cpp  main.cu
